--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
         </div>
 
         <!-- Run the game code -->
-        <script type="text/javascript" src="AllOutAttackGenerator/AllOutAttackGenerator.js?MCEZB=1832648133"></script>
+        <script type="text/javascript" src="AllOutAttackGenerator/AllOutAttackGenerator.js?NZPAC=292910139"></script>
         <script>window.onload = GameMaker_Init;</script>
     </body>
 </html>
